# analyse-pgn

./: .clangd  .gitignore  ADDPATH_WIN.bat  CMakeLists.txt  LICENSE  Makefile  Makefile.old  README.md  UCI-Notes.md  analyzed-game.pgn  apgn.cpp  apgnFileSys.cpp  apgnFileSys.hpp  board.hpp  board_test.cpp  check.hpp  convert.cpp  convert.hpp  env.cpp  env.txt  envgrabber.hpp  execute.cpp  execute.hpp  main.cpp  modifications.txt  path.hpp  pgn-extract.7z  pgn.hpp  pgn_test.cpp  test.cpp  uci-analyser.7z  winProcRun.cpp  winProcRun.hpp
.github/workflows/: build.yml  ci.yml
cmake/: check_outputs.cmake  delete_outputs.cmake  warnings_as_errors.cmake
dependencies/: DEPENDENCIES.TXT  MODIFICATIONS.TXT  dependencies.txt  modifications.txt
dependencies/pgn-extract/: CMakeLists.txt  Makefile
dependencies/uci-analyser/: CMakeLists.txt  Makefile  README.TXT  analyse.cpp  engine.cpp  engine.h  evaluation.cpp  evaluation.h  example-output.xml  example-uci.pgn  example.pgn  interpret.cpp  interpret.hpp  utils.cpp  utils.h
dev_ref/: CLI_UCI_command_samples.txt  clean.pgn  enphasunt_edge_case.pgn  normal_rook_moves.pgn  pgn_sample2.pgn  pgn_sample3.pgn  promotion.pgn  rook_letter_aligned.pgn  rook_number_aligned.pgn  sample_game.pgn  testpgn.pgn
engine/: note.txt
pgn_samples/: analyzed-first.pgn  first.pgn
src/: .clang-format  .clangd  analyse_game.cpp  analyse_game.hpp  apgn.cpp  chess_games.cpp  chess_games.hpp  defaults.hpp  display_info.cpp  display_info.hpp  extract_args.cpp  extract_args.hpp  generate_stats.cpp  generate_stats.hpp  get_exe_dir.cpp  load_games.cpp  load_games.hpp  logger.cpp  logger.hpp  process.cpp  process_utils.hpp  save_games.cpp  save_games.hpp
src/analyse_game/: analyse_game.cpp  analyse_game.hpp  get_ucigo_bestmove.cpp  get_ucigo_bestmove.hpp  score_comments.cpp  score_comments.hpp
src/extract_args/: checks.cpp  checks.hpp  extract_args.cpp  extract_args.hpp  get_defaults.cpp  get_defaults.hpp
src/generate_stats/: generate_stats.cpp  generate_stats.hpp
src/info/: display_info.cpp  display_info.hpp
src/load_games/: load_games.cpp  load_games.hpp
src/save_games/: save_games.cpp
src/utils/: get_exe_dir.hpp  logger.cpp  logger.hpp  process_utils.cpp  process_utils.hpp
